Finish header styling

--- a/src/template.html
+++ b/src/template.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yusei+Magic">
     <title>Restaurant Page</title>
 </head>
 <body>
     <header>
         <nav>
-            <button>Home</button>
+            <button style="background-color: rgb(236,164,59);">Home</button>
             <button>Menu</button>
             <button>About</button>
         </nav>
